# jaxon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  personal-ai-assistant-prd.md  pyproject.toml
data.example/agents/: academic_researcher.yaml  coder.yaml  image_analyst.yaml  long_text_reader.yaml  research_coordinator.yaml  web_researcher.yaml
data.example/memory/: IDENTITY.md  MEMORY.md
data.example/skills/: arxiv-reader.md  code-review.md  community-pulse.md  daily-briefing.md  fact-check.md  tech-evaluation.md  video-researcher.md
data/agents/: image_analyst.yaml  researcher.yaml  web_researcher.yaml
docs/: QUICK_REFERENCE.md  REMAINING_TASKS.md  USER_GUIDE.md  WEBHOOKS.md  calendar-setup.md  google-maps-setup.md  quick-reference.md  remaining-tasks.md  runbook-cloudflare-access.md  runbook-google-calendar.md  runbook-telegram.md  runbook-webhooks.md  runbook-whatsapp.md  user-guide.md
tests/: conftest.py  test_agents.py  test_bedrock_client.py  test_browser_tool.py  test_calendar_tool.py  test_commands.py  test_config.py  test_contacts_tool.py  test_finance_tool.py  test_google_calendar.py  test_google_maps_tool.py  test_llm_client.py  test_memory.py  test_permissions.py  test_phase2.py  test_phase3.py  test_phase4.py  test_plugins.py  test_reminders_tool.py  test_session.py  test_slack.py  test_telegram_media.py  test_weather_tool.py  test_whatsapp.py
townsquare/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
townsquare/src/townsquare/: __init__.py  app.py  cli.py  config.py  routes.py  ui.py
(+133 files in other folders)
