[project]
name = "townsquare"
version = "0.1.0"
description = "Town Square — standalone microblog/feed service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "sqlite-utils>=3.37",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
]

[project.scripts]
townsquare = "townsquare.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/townsquare"]
